--- a/index.html
+++ b/index.html
@@ -68,28 +68,23 @@
         </div>
 
         <main>
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
+            <div class="card graph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
                 t porro quod nulla dolore nostrum veniam, non illo 
                 ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
             </div>
 
 
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
+            <div class="card graph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
                 t porro quod nulla dolore nostrum veniam, non illo 
                 ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
             </div>
 
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
+            <div class="card graph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
                 t porro quod nulla dolore nostrum veniam, non illo 
                 ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
             </div>
 
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
-            </div>
-
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
+            <div class="card graph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
                 t porro quod nulla dolore nostrum veniam, non illo 
                 ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
             </div>
@@ -138,25 +133,17 @@
                 t porro quod nulla dolore nostrum veniam, non illo 
                 ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
             </div>
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
-            </div>
 
             <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
                 t porro quod nulla dolore nostrum veniam, non illo 
                 ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
             </div>
-
             <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
                 t porro quod nulla dolore nostrum veniam, non illo 
                 ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
             </div>
 
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
-            </div>
+
 
         </main>
     </div>
