button animations are added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <!-- add github logo-icon -->
                     <i class="fab fa-github" style="padding-right: 10px;"></i>
                     Kaweesha Marasinghe(@kaweesha-Mr)</div>
-                <ul>
+                <ul class="button">
                     <li>
                         <!-- new icon -->
                         <i class="fas fa-plus"></i>
@@ -118,33 +118,6 @@
                 t porro quod nulla dolore nostrum veniam, non illo 
                 ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
             </div>
-
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
-            </div>
-
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
-            </div>
-
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
-            </div>
-
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
-            </div>
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
-            </div>
-
-
-
         </main>
     </div>
     
