dahbord partially completed to fulfil project needs

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 </head>
 <body>
 
-    <div class="container">
-        <header>
+    <div class="container shadow">
+        <header class="shadow">
             <div class="titles">
                 <!-- create a search bar -->
                 <!-- get search icon -->
                 <i class="fas fa-search"></i>
-                <input type="text" placeholder="Search" class="search">
+                <input type="text" placeholder="Search" class="search shadow">
 
             </div>
             <nav>
@@ -48,7 +48,13 @@
         </header>
 
         <div class="side-bar">
-            <div class="list-1">
+            <div class="logo01">
+                <!-- add dashbord icon -->
+                <i class="fas fa-chart-pie"></i>
+                Dashbord
+            </div>
+
+            <div class="list-1 shadow">
                 <ul>
                     <li>Home</li>
                     <li>Profile</li>
@@ -68,40 +74,27 @@
         </div>
 
         <main>
-            <div class="card graph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
+            <div class="card graph">
             </div>
 
 
-            <div class="card graph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
+            <div class="card graph">
             </div>
 
-            <div class="card graph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
+            <div class="card graph">
             </div>
 
-            <div class="card graph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
+            <div class="card graph">
             </div>
 
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
-            </div>
-
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
-            </div>
-
-            <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
-                t porro quod nulla dolore nostrum veniam, non illo 
-                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
+            <div class="card">
+                <div class="image">
+                    <img src="./project.png" alt="" height=200px" width="300px" style="border-radius: 30px; object-fit: fill;">
+                        Project Fashionite <br>
+                        Garment and Management System
+                    
+                </div>
+                
             </div>
 
             <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
