--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
                 ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
             </div>
 
+                        <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
+                t porro quod nulla dolore nostrum veniam, non illo 
+                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
+            </div>
+
+                        <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque si44
+                t porro quod nulla dolore nostrum veniam, non illo 
+                ipsa obcaecati iusto id quasi perspiciatis, nisi earum fugiat impedit. Amet, quaerat.
+            </div>
+
+
         </main>
     </div>
     
